--- a/resources/style.css
+++ b/resources/style.css
@@ -32,24 +32,33 @@ a {
 
 /* MAIN */
 
-.content {
+.container {
   display: flex;
   margin: 10px;
   border: 1px solid black;
   justify-content: space-between;
 }
-.large {
-  flex-direction: column;
+
+.column-large {
   display: flex;
   border: 1px solid black;
   width: 630px;
-  flex-wrap: wrap-reverse;
+  flex-direction: column;
+}
 
+.image-content {
+  border: 1px solid black;
 }
-.medium {
+
+.narrative {
+  border: 1px solid black;
+}
+
+.column-medium {
+  border: 1px solid black;
   width: 300px;
-  border: 1px solid black;
 }
-.box p {
-  border: 1px solid black;
+
+.column-small {
+  width: 240px;
 }
