--- a/resources/style.css
+++ b/resources/style.css
@@ -35,7 +35,7 @@ a {
 .container {
   display: flex;
   margin: 10px;
-  border: 1px solid black;
+  border: 3px solid red;
   justify-content: space-between;
 }
 
