--- a/resources/style.css
+++ b/resources/style.css
@@ -35,8 +35,9 @@ a {
 .container {
   display: flex;
   margin: 10px;
-  border: 3px solid red;
-  justify-content: space-between;
+  border: 1px solid black;
+  width: 1132px;
+  margin: 0 auto;
 }
 
 .column-large {
